seaqt/QtWidgets/gen_qgraphicsview.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QGraphicsView QGraphicsView;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QRectF QRectF;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
void QGraphicsView_invalidateScene1(QGraphicsView* self, QRectF* rect);
void QGraphicsView_invalidateScene2(QGraphicsView* self, QRectF* rect, int layers);
bool QGraphicsView_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsView_virtualbase_metaObject(const void* self);
bool QGraphicsView_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsView_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsView_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QGraphicsView_virtualbase_sizeHint(const void* self);
bool QGraphicsView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QGraphicsView_virtualbase_inputMethodQuery(const void* self, int query);
bool QGraphicsView_override_virtual_setupViewport(void* self, intptr_t slot);
void QGraphicsView_virtualbase_setupViewport(void* self, QWidget* widget);
bool QGraphicsView_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsView_virtualbase_event(void* self, QEvent* event);
bool QGraphicsView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QGraphicsView_virtualbase_viewportEvent(void* self, QEvent* event);
bool QGraphicsView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QGraphicsView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QGraphicsView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QGraphicsView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QGraphicsView_override_virtual_dropEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QGraphicsView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QGraphicsView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QGraphicsView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QGraphicsView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QGraphicsView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QGraphicsView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QGraphicsView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QGraphicsView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QGraphicsView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QGraphicsView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QGraphicsView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QGraphicsView_override_virtual_paintEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QGraphicsView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QGraphicsView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QGraphicsView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QGraphicsView_override_virtual_showEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QGraphicsView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QGraphicsView_override_virtual_drawBackground(void* self, intptr_t slot);
void QGraphicsView_virtualbase_drawBackground(void* self, QPainter* painter, QRectF* rect);
bool QGraphicsView_override_virtual_drawForeground(void* self, intptr_t slot);
void QGraphicsView_virtualbase_drawForeground(void* self, QPainter* painter, QRectF* rect);
bool QGraphicsView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QGraphicsView_virtualbase_minimumSizeHint(const void* self);
bool QGraphicsView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsView_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QGraphicsView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QGraphicsView_virtualbase_viewportSizeHint(const void* self);
bool QGraphicsView_override_virtual_changeEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QGraphicsView_override_virtual_initStyleOption(void* self, intptr_t slot);
void QGraphicsView_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QGraphicsView_override_virtual_devType(void* self, intptr_t slot);
int QGraphicsView_virtualbase_devType(const void* self);
bool QGraphicsView_override_virtual_setVisible(void* self, intptr_t slot);
void QGraphicsView_virtualbase_setVisible(void* self, bool visible);
bool QGraphicsView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QGraphicsView_virtualbase_heightForWidth(const void* self, int param1);
bool QGraphicsView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QGraphicsView_virtualbase_hasHeightForWidth(const void* self);
bool QGraphicsView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QGraphicsView_virtualbase_paintEngine(const void* self);
bool QGraphicsView_override_virtual_enterEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QGraphicsView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_leaveEvent(void* self, QEvent* event);
void QGraphicsView_virtualbase_moveEvent(void* self, QMoveEvent* event);