seaqt/QtWidgets/gen_qgraphicsview.nim

proc fcQGraphicsView_invalidateScene1(self: pointer, rect: pointer): void {.importc: "QGraphicsView_invalidateScene1".}
proc fcQGraphicsView_invalidateScene2(self: pointer, rect: pointer, layers: cint): void {.importc: "QGraphicsView_invalidateScene2".}
proc fQGraphicsView_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QGraphicsView_virtualbase_metaObject".}
proc fcQGraphicsView_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_metaObject".}
proc fQGraphicsView_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QGraphicsView_virtualbase_metacast".}
proc fcQGraphicsView_override_virtual_metacast(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_metacast".}
proc fQGraphicsView_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGraphicsView_virtualbase_metacall".}
proc fcQGraphicsView_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_metacall".}
proc fQGraphicsView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QGraphicsView_virtualbase_sizeHint".}
proc fcQGraphicsView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_sizeHint".}
proc fQGraphicsView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QGraphicsView_virtualbase_inputMethodQuery".}
proc fcQGraphicsView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_inputMethodQuery".}
proc fQGraphicsView_virtualbase_setupViewport(self: pointer, widget: pointer): void{.importc: "QGraphicsView_virtualbase_setupViewport".}
proc fcQGraphicsView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_setupViewport".}
proc fQGraphicsView_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsView_virtualbase_event".}
proc fcQGraphicsView_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_event".}
proc fQGraphicsView_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QGraphicsView_virtualbase_viewportEvent".}
proc fcQGraphicsView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_viewportEvent".}
proc fQGraphicsView_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_contextMenuEvent".}
proc fcQGraphicsView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_contextMenuEvent".}
proc fQGraphicsView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_dragEnterEvent".}
proc fcQGraphicsView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_dragEnterEvent".}
proc fQGraphicsView_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_dragLeaveEvent".}
proc fcQGraphicsView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_dragLeaveEvent".}
proc fQGraphicsView_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_dragMoveEvent".}
proc fcQGraphicsView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_dragMoveEvent".}
proc fQGraphicsView_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_dropEvent".}
proc fcQGraphicsView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_dropEvent".}
proc fQGraphicsView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_focusInEvent".}
proc fcQGraphicsView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_focusInEvent".}
proc fQGraphicsView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QGraphicsView_virtualbase_focusNextPrevChild".}
proc fcQGraphicsView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_focusNextPrevChild".}
proc fQGraphicsView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_focusOutEvent".}
proc fcQGraphicsView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_focusOutEvent".}
proc fQGraphicsView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_keyPressEvent".}
proc fcQGraphicsView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_keyPressEvent".}
proc fQGraphicsView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_keyReleaseEvent".}
proc fcQGraphicsView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_keyReleaseEvent".}
proc fQGraphicsView_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_mouseDoubleClickEvent".}
proc fcQGraphicsView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_mouseDoubleClickEvent".}
proc fQGraphicsView_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_mousePressEvent".}
proc fcQGraphicsView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_mousePressEvent".}
proc fQGraphicsView_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_mouseMoveEvent".}
proc fcQGraphicsView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_mouseMoveEvent".}
proc fQGraphicsView_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_mouseReleaseEvent".}
proc fcQGraphicsView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_mouseReleaseEvent".}
proc fQGraphicsView_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_wheelEvent".}
proc fcQGraphicsView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_wheelEvent".}
proc fQGraphicsView_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_paintEvent".}
proc fcQGraphicsView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_paintEvent".}
proc fQGraphicsView_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_resizeEvent".}
proc fcQGraphicsView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_resizeEvent".}
proc fQGraphicsView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QGraphicsView_virtualbase_scrollContentsBy".}
proc fcQGraphicsView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_scrollContentsBy".}
proc fQGraphicsView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_showEvent".}
proc fcQGraphicsView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_showEvent".}
proc fQGraphicsView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_inputMethodEvent".}
proc fcQGraphicsView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_inputMethodEvent".}
proc fQGraphicsView_virtualbase_drawBackground(self: pointer, painter: pointer, rect: pointer): void{.importc: "QGraphicsView_virtualbase_drawBackground".}
proc fcQGraphicsView_override_virtual_drawBackground(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_drawBackground".}
proc fQGraphicsView_virtualbase_drawForeground(self: pointer, painter: pointer, rect: pointer): void{.importc: "QGraphicsView_virtualbase_drawForeground".}
proc fcQGraphicsView_override_virtual_drawForeground(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_drawForeground".}
proc fQGraphicsView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QGraphicsView_virtualbase_minimumSizeHint".}
proc fcQGraphicsView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_minimumSizeHint".}
proc fQGraphicsView_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QGraphicsView_virtualbase_eventFilter".}
proc fcQGraphicsView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_eventFilter".}
proc fQGraphicsView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QGraphicsView_virtualbase_viewportSizeHint".}
proc fcQGraphicsView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_viewportSizeHint".}
proc fQGraphicsView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsView_virtualbase_changeEvent".}
proc fcQGraphicsView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_changeEvent".}
proc fQGraphicsView_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QGraphicsView_virtualbase_initStyleOption".}
proc fcQGraphicsView_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_initStyleOption".}
proc fQGraphicsView_virtualbase_devType(self: pointer, ): cint{.importc: "QGraphicsView_virtualbase_devType".}
proc fcQGraphicsView_override_virtual_devType(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_devType".}
proc fQGraphicsView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QGraphicsView_virtualbase_setVisible".}
proc fcQGraphicsView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_setVisible".}
proc fQGraphicsView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QGraphicsView_virtualbase_heightForWidth".}
proc fcQGraphicsView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_heightForWidth".}
proc fQGraphicsView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QGraphicsView_virtualbase_hasHeightForWidth".}
proc fcQGraphicsView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_hasHeightForWidth".}
proc fQGraphicsView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QGraphicsView_virtualbase_paintEngine".}
proc fcQGraphicsView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_paintEngine".}
proc fQGraphicsView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_enterEvent".}
proc fcQGraphicsView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_enterEvent".}
proc fQGraphicsView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_leaveEvent".}
proc fcQGraphicsView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_leaveEvent".}
proc fQGraphicsView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_moveEvent".}
